k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: getfit
  labels:
    app.kubernetes.io/name: getfit
    app.kubernetes.io/part-of: getfit
